# flyshadow-core

./: .gitignore  Cargo.toml
flyshadow_core_lib/: Cargo.toml
flyshadow_core_lib/src/: context_lib.rs  free_lib.rs  lib.rs  proxy_lib.rs  tun_lib.rs  tunnel_lib.rs
jni/: Cargo.toml
tunnel/: Cargo.toml
tunnel/src/: lib.rs  main.rs
tunnel/src/context/: connect_info.rs  context.rs  mod.rs  proxy_type.rs  rule_matcher.rs
tunnel/src/proxy/: http_handler.rs  mod.rs  proxy.rs  proxy_client.rs  socks5_handler.rs  tunnel_selector.rs  uri_util.rs
tunnel/src/tun/: mod.rs  packet.rs  tcp_pipe.rs  tcp_pipe_context.rs  tun.rs  tun_handler.rs
tunnel/src/tunnel/: mod.rs  test_aes.rs  tunnel.rs  tunnel_package.rs
web/: Cargo.toml
