[package]
name = "flyshadow_core_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "flyshadow_core_lib"
crate-type = ["cdylib"]

[dependencies]
tunnel = { path = "../tunnel" }
tokio = { version = "1.35.1", features = ["full"] }
