[package]
name = "tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
md5 = "0.7.0"
regex = "1.10.2"
openssl = "0.10.62"
ipnet = "2.9.0"
serde = "1.0.193"
serde_json = "1.0.109"